[package]
name = "sandbox"
version = "0.0.0"
edition = "2024"
default-run = "sandbox"

[[bin]]
name = "sandbox"
path = "src/main.rs"

[[bin]]
name = "sandbox-pty"
path = "src/pty.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
shared = { path = "../shared" }
windows = { workspace = true }
