[package]
name = "shared"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
dllinject = { git = "https://github.com/amrbashir/dllinject", rev = "444c816507de19774c57929288950f0000672d09" }
wincode = { version = "0.4", features = ["derive"] }
windows = { workspace = true }
